# obsidian-ttygtd

./: 2025-11-19.md  CLAUDE.md  generate-pptx-nttdx.cjs  generate-test-pptx.cjs  package-lock.json  package.json  あとで読む.md
.claude/: settings.local.json
.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
00_Memo/: colab-cursor-test.ipynb  アプリアイデアメモ.md
01_Inbox/: 20251125_長野案件-データベース構築-基本情報.md  20251125_長野案件-顧客資料-信州ITバレー構想とデータベース構築.md  20251202_長野提案-AI活用費用概算.md  20251203_共立製薬-動物監視AI導入要件整理.md  20251204_NTTDX北海道エアポート案件メモ.md  20251212_NTTDXパートナー-顧客接点拡大ミッション.md
02_Daily/: 2026-02-23-Daily.md
03_Input/: NTTDX-1on1-準備メモ.md  this-week-focus.md  リンクストック-あとで読む.md
05_Output/Projects/@Active/Kyoritsu-Seiyaku-DX/llm-evaluation/: .env.example  .gitignore  README.md  pyproject.toml
05_Output/Projects/@Active/Kyoritsu-Seiyaku-DX/llm-evaluation/config/: config.yaml
05_Output/Projects/@Active/Kyoritsu-Seiyaku-DX/llm-evaluation/config/prompts/: extraction_prompt.txt
05_Output/Projects/@Active/Kyoritsu-Seiyaku-DX/llm-evaluation/src/: __init__.py  evaluator.py  main.py  pdf_processor.py
05_Output/Projects/@Active/Kyoritsu-Seiyaku-DX/llm-evaluation/src/llm_clients/: __init__.py  base_client.py  claude_client.py  gemini_client.py  openai_client.py
05_Output/Projects/@Active/Kyoritsu-Seiyaku-DX/llm-evaluation/src/schemas/: __init__.py  extraction_schema.json  models.py
99_Archive/: 2025-11-18.md  2025-11-19.md  20251118_Xリンク調査メモ.md  20251118memo  20251119_Xリンク調査メモ.md  20251121memo  20251212メモ.md  NTTDX北海道エアポート案件メモ  共立製薬オンボーディングメモ  共立製薬メモ.MD
(+261 files in other folders)
